--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
+appnope==0.1.0
+decorator==4.0.4
 Flask==0.10.1
 Flask-Login==0.3.2
 Flask-SQLAlchemy==2.1
+gnureadline==6.3.3
+ipython==4.0.0
+ipython-genutils==0.1.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 MySQL-python==1.2.5
+path.py==8.1.2
+pexpect==4.0.1
+pickleshare==0.5
+ptyprocess==0.5
+simplegeneric==0.8.1
 SQLAlchemy==1.0.9
+traitlets==4.0.0
 Werkzeug==0.10.4
 wheel==0.24.0
