--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,26 @@
-appnope (0.1.0)
-awscli (1.10.20)
-botocore (1.4.11)
-colorama (0.3.3)
-decorator (4.0.9)
-docutils (0.12)
-futures (3.0.5)
-gnureadline (6.3.3)
-ipython (4.1.2)
-ipython-genutils (0.1.0)
-jmespath (0.9.0)
-MySQL-python (1.2.5)
-nose (1.3.7)
-numpy (1.11.0)
-pathlib2 (2.1.0)
-pexpect (4.0.1)
-pickleshare (0.7.2)
-pip (8.1.1)
-ptyprocess (0.5.1)
-pyasn1 (0.1.9)
-python-dateutil (2.5.2)
-requests (2.9.1)
-rsa (3.3)
-s3transfer (0.0.1)
-setuptools (19.4)
-simplegeneric (0.8.1)
-six (1.10.0)
-traitlets (4.2.1)
-wheel (0.26.0)
+appnope==0.1.0
+awscli==1.10.20
+botocore==1.4.11
+colorama==0.3.3
+decorator==4.0.9
+docutils==0.12
+futures==3.0.5
+gnureadline==6.3.3
+ipython==4.1.2
+ipython-genutils==0.1.0
+jmespath==0.9.0
+MySQL-python==1.2.5
+nose==1.3.7
+numpy==1.11.0
+pathlib2==2.1.0
+pexpect==4.0.1
+pickleshare==0.7.2
+ptyprocess==0.5.1
+pyasn1==0.1.9
+python-dateutil==2.5.2
+requests==2.9.1
+rsa==3.3
+s3transfer==0.0.1
+simplegeneric==0.8.1
+six==1.10.0
+traitlets==4.2.1
