--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,29 @@
 appnope==0.1.0
-awscli==1.10.20
-botocore==1.4.11
-colorama==0.3.3
 decorator==4.0.9
-docutils==0.12
-futures==3.0.5
+Django==1.9.5
+Flask==0.10.1
+Flask-HTTPAuth==2.7.0
+Flask-Login==0.3.2
+Flask-SQLAlchemy==2.1
 gnureadline==6.3.3
+image==1.5.3
 ipython==4.1.2
 ipython-genutils==0.1.0
-jmespath==0.9.0
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
 MySQL-python==1.2.5
-nose==1.3.7
-numpy==1.11.0
+path.py==8.1.2
 pathlib2==2.1.0
 pexpect==4.0.1
 pickleshare==0.7.2
+Pillow==3.2.0
 ptyprocess==0.5.1
-pyasn1==0.1.9
-python-dateutil==2.5.2
-requests==2.9.1
-rsa==3.3
-s3transfer==0.0.1
+pytesseract==0.1.6
+requests==2.8.1
 simplegeneric==0.8.1
 six==1.10.0
+SQLAlchemy==1.0.9
+tesseract==0.1.3
 traitlets==4.2.1
+Werkzeug==0.10.4
